--- a/packages/swcr/package.json
+++ b/packages/swcr/package.json
@@ -39,7 +39,8 @@
     "tsconfig-paths": "3.12.0",
     "tsup": "5.11.13",
     "typescript": "4.5.5",
-    "uvu": "0.5.3"
+    "uvu": "0.5.3",
+    "zx": "^5.0.0"
   },
   "peerDependencies": {
     "@swc/core": "^1.2.138",
