--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "version-packages": "changeset version",
     "vp": "pnpm version-packages",
     "release": "pnpm build && pnpm release:only",
-    "release:only": "changeset publish",
+    "release:only": "npm_config_registry=https://registry.npmjs.com/ changeset publish",
+    "build": "pnpm -r --filter ./packages run build",
     "test": "pnpm -r --filter ./packages run test"
   },
   "devDependencies": {
