--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.20.0",
-    "@fz6m/eslint-plugin-sakina": "1.0.7",
-    "@typescript-eslint/parser": "5.11.0",
-    "eslint": "8.8.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-prettier": "4.0.0",
+    "@fz6m/eslint-plugin-sakina": "^1.1.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
-    "lint-staged": "^12.3.3",
-    "only-allow": "^1.0.0",
-    "prettier": "2.5.1"
+    "lint-staged": "^12.3.4",
+    "only-allow": "^1.1.0",
+    "prettier": "^2.5.1"
   },
   "lint-staged": {
     "*.{jsx,md,json}": [
