--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Release
+name: CI
 
 on:
   push:
@@ -6,8 +6,7 @@ on:
       - main
 
 jobs:
-  release:
-    name: Upgrade-version
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
