--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,8 +1,8 @@
 {
-  "$schema": "https://unpkg.com/@changesets/config@1.6.1/schema.json",
+  "$schema": "https://unpkg.com/@changesets/config@1.7.0/schema.json",
   "changelog": "@changesets/cli/changelog",
   "commit": false,
-  "linked": [["swno", "swcr"]],
+  "fixed": [["swno", "swcr"]],
   "access": "public",
   "baseBranch": "origin/main",
   "updateInternalDependencies": "patch",
