--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky install",
-    "push": "changeset",
-    "version-packages": "changeset version",
-    "vp": "pnpm version-packages",
-    "release": "pnpm build && pnpm release:only",
-    "release:only": "npm_config_registry=https://registry.npmjs.com/ changeset publish",
     "build": "pnpm -r --filter ./packages run build",
-    "test": "pnpm -r --filter ./packages run test"
+    "test": "pnpm -r --filter ./packages run test",
+    "push": "vary push",
+    "vp": "vary vp",
+    "release": "vary release",
+    "release:only": "vary release:only",
+    "release:quick": "vary release:quick",
+    "clean:output": "vary clean:output"
   },
   "devDependencies": {
     "@changesets/cli": "^2.21.1",
     "@fz6m/eslint-plugin-sakina": "^1.1.0",
     "@typescript-eslint/parser": "^5.14.0",
+    "@xn-sakina/vary": "^1.0.0",
+    "commit-verify": "^1.0.2",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
