--- a/package.json
+++ b/package.json
@@ -16,16 +16,17 @@
   "devDependencies": {
     "@changesets/cli": "^2.21.1",
     "@fz6m/eslint-plugin-sakina": "^1.1.0",
-    "@typescript-eslint/parser": "^5.14.0",
+    "@typescript-eslint/parser": "^5.15.0",
     "@xn-sakina/vary": "^1.0.0",
-    "commit-verify": "^1.0.2",
+    "commit-verify": "^1.0.3",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
-    "lint-staged": "^12.3.5",
+    "lint-staged": "^12.3.6",
     "only-allow": "^1.1.0",
-    "prettier": "^2.5.1"
+    "prettier": "^2.6.0",
+    "zx": "^5.2.0"
   },
   "lint-staged": {
     "*.{jsx,md,json}": [
