--- a/packages/swcr/package.json
+++ b/packages/swcr/package.json
@@ -26,7 +26,7 @@
     "push": "npm publish --registry=https://registry.npmjs.com/"
   },
   "devDependencies": {
-    "@swc/core": "1.2.154",
+    "@swc/core": "1.2.156",
     "@types/node": "16.11.24",
     "@types/source-map-support": "0.5.4",
     "execa": "4.1.0",
@@ -35,14 +35,13 @@
     "source-map": "0.7.3",
     "source-map-support": "0.5.21",
     "strip-json-comments": "4.0.0",
-    "tsconfig-paths": "3.13.0",
+    "tsconfig-paths": "3.14.0",
     "tsup": "5.12.1",
     "typescript": "4.6.2",
-    "uvu": "0.5.3",
-    "zx": "^5.2.0"
+    "uvu": "0.5.3"
   },
   "peerDependencies": {
-    "@swc/core": "^1.2.154",
+    "@swc/core": "^1.2.156",
     "regenerator-runtime": "^0.13.9"
   },
   "engines": {
