--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "lint-staged": "^12.3.7",
     "only-allow": "^1.1.0",
     "prettier": "^2.6.2",
+    "typescript": "4.6.3",
     "zx": "^5.2.0",
-    "typescript": "4.6.3"
+    "zx-pro": "^6.1.0"
   },
   "lint-staged": {
     "*.{jsx,md,json}": [
