--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky install",
-    "build": "pnpm -r --filter ./packages run build",
-    "test": "pnpm -r --filter ./packages run test",
+    "build": "pnpm -r --filter './packages/**' run build",
+    "test": "pnpm -r --filter './packages/**' run test",
     "push": "vary push",
     "vp": "vary vp",
     "release": "vary release",
@@ -15,17 +15,17 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.22.0",
-    "@fz6m/eslint-plugin-sakina": "^1.1.1",
-    "@xn-sakina/vary": "^1.0.0",
+    "@fz6m/eslint-plugin-sakina": "^2.0.2",
+    "@xn-sakina/vary": "^1.0.1",
     "commit-verify": "^1.0.3",
-    "eslint": "^8.12.0",
+    "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
-    "lint-staged": "^12.3.7",
+    "lint-staged": "^12.4.1",
     "only-allow": "^1.1.0",
     "prettier": "^2.6.2",
-    "typescript": "4.6.3",
+    "typescript": "4.6.4",
     "zx": "^5.2.0",
     "zx-pro": "^6.1.0"
   },
@@ -38,9 +38,11 @@
     ]
   },
   "engines": {
-    "node": ">=14",
-    "pnpm": ">=6.20"
+    "node": ">= 16.14.1",
+    "pnpm": "^7.0.1",
+    "yarn": "forbidden, use pnpm",
+    "npm": "forbidden, use pnpm"
   },
-  "packageManager": "pnpm@6.20.0",
+  "packageManager": "pnpm@7.0.0",
   "license": "MIT"
 }
