--- a/packages/swcr/package.json
+++ b/packages/swcr/package.json
@@ -40,8 +40,7 @@
     "uvu": "0.5.3"
   },
   "peerDependencies": {
-    "@swc/core": "^1.2.244",
-    "regenerator-runtime": "^0.13.9"
+    "@swc/core": "^1.2.244"
   },
   "engines": {
     "node": ">=14"
